[project]
name = "experiment-templates"
version = "0.1.0"
description = "Reusable templates for rigorous ML experiments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax-ai-stack>=2025.10.28",
    "jax[cuda12]>=0.8.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "optax>=0.2.6",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.40.0",
    "tqdm>=4.60.0",
    "wandb>=0.16.0",
]
